# figma-api-module

./: .gitignore  CURL.md
docs/: figma.v3.1.0.curl.md  figma.v3.1.0.openapi.table.md  figma.v3.1.0.openapi.yaml
mjs/: .gitignore  .npmrc  TESTING.md  TEST_FIX_SUMMARY.md  jest.base.config.mjs  jest.config.mjs  package.json
mjs/.bin/: debug_npm_test.sh
mjs/comments/: .eslintrc.json  .gitignore  EXAMPLES.md  INSTRUCTIONS.md  README.md  REQ001.md  REQ002.md  REQ003.md  TECHNICAL_DOCUMENTATION.md  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package.json
mjs/comments/src/core/: client.mjs  exceptions.mjs  service.mjs
mjs/comments/src/interfaces/: cli.mjs  sdk.mjs
mjs/comments/tests/unit/: client-proxy.test.mjs  client.test.mjs  reactions.test.mjs  service.test.mjs
mjs/components/: .eslintrc.json  .gitignore  .prettierrc  EXAMPLES.md  README.md  REQ003.md  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package-lock.json  package.json
mjs/components/src/core/: client.d.mts  client.mjs  exceptions.d.mts  exceptions.mjs  service.d.mts  service.mjs
mjs/components/src/interfaces/: cli.mjs  sdk.d.mts  sdk.mjs
mjs/components/tests/unit/: client-proxy.test.mjs  client.test.mjs  service.test.mjs
mjs/dev-resources/: EXAMPLES.md  INSTRUCTIONS.md  REQ003.md  cli.mjs  cli.test.mjs  client.mjs  client.mjs.bak  client.test.mjs  health-check-server.mjs  index.mjs  jest.config.mjs  package-lock.json  package.json  sdk.mjs  sdk.test.mjs  service.mjs  types.d.ts
mjs/figma-fetch/: .gitignore  README.md  health-check-server.mjs  jest.config.mjs  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
mjs/figma-fetch/src/: index.ts
mjs/figma-fetch/src/adapters/: NativeFetchAdapter.ts  UndiciFetchAdapter.ts  index.ts
mjs/figma-fetch/src/client/: FigmaApiClient.ts  index.ts
mjs/figma-fetch/src/core/: FetchAdapter.ts
mjs/figma-fetch/src/errors/: index.ts
mjs/figma-fetch/src/types/: index.ts
mjs/figma-fetch/src/utils/: RateLimiter.ts  RequestCache.ts  RetryHandler.ts  index.ts
mjs/files/: .eslintrc.json  .gitignore  EXAMPLES.md  README.md  TECHNICAL_DOCUMENTATION.md  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package-lock.json  package.json
mjs/files/test-helpers/: proxy-test-utils.mjs
mjs/library-analytics/: .eslintrc.json  .gitignore  EXAMPLES.md  README.md  REQ003.md  cli.mjs  client.d.mts  client.mjs  client.mjs.bak  client.test.mjs  errors.mjs  health-check-server.mjs  index.d.mts  index.mjs  integration-test.mjs  jest.config.mjs  package-lock.json  package.json  sdk.d.mts  sdk.mjs  service.d.mts  service.mjs  service.test.mjs
mjs/projects/: .eslintrc.json  .gitignore  EXAMPLES.md  README.md  REQ003.md  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package.json
mjs/test-helpers/: mockFetchAdapter.mjs  proxy-test-utils.mjs
mjs/variables/: .eslintrc.json  .gitignore  EXAMPLES.md  README.md  REQ003.md  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package-lock.json  package.json
mjs/variables/tests/: integration-test.mjs
mjs/webhooks/: EXAMPLES.md  INSTRUCTIONS.md  REQ003.md  cli.mjs  client.d.mts  client.mjs  client.mjs.bak  client.test.mjs  errors.mjs  health-check-server.mjs  index.d.mts  index.mjs  jest.config.mjs  package-lock.json  package.json  sdk.d.mts  sdk.mjs
py/comments/: .gitignore  EXAMPLES.md  README.md  pyproject.toml  requirements.txt  setup.py
py/comments/src/figma_comments/: __init__.py
py/comments/src/figma_comments/core/: __init__.py  client.py  exceptions.py  models.py  service.py
py/comments/src/figma_comments/interfaces/: __init__.py  cli.py  sdk.py
py/comments/tests/: __init__.py  conftest.py
py/comments/tests/unit/: __init__.py  test_client.py  test_service.py
py/components/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/components/src/figma_components/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/components/tests/: conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
py/dev-resources/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/dev-resources/src/figma_dev_resources/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/dev-resources/tests/: conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
py/files/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/files/src/figma_files/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/files/tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
py/library-analytics/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/library-analytics/src/figma_library_analytics/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/library-analytics/tests/: conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
py/projects/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/projects/src/figma_projects/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/projects/tests/: conftest.py  test_client.py  test_sdk.py  test_server.py
py/variables/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/variables/src/figma_variables/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/variables/tests/: conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
py/webhooks/: EXAMPLES.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
py/webhooks/src/figma_webhooks/: __init__.py  cli.py  client.py  errors.py  models.py  sdk.py  server.py  utils.py
py/webhooks/tests/: conftest.py  test_cli.py  test_client.py  test_sdk.py  test_server.py
test-helpers/: proxy-test-utils.mjs
(+40 files in other folders)
